aks-poland-central/apps/elixir-webrtc-live-broadcaster/live-broadcaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live-broadcaster
  labels:
    app: live-broadcaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: live-broadcaster
  template:
    metadata:
      labels:
        app: live-broadcaster
    spec:
      containers:
      - name: live-broadcaster
        image: megzo/elixir-webrtc-live-broadcaster:v0.1
        command:
        - sh
        - -c 
        - "chmod +x /app/releases/0.1.0/env.sh && echo '#!/bin/bash' >/app/releases/0.1.0/env.sh &&  /app/bin/live_broadcaster start"
        ports:
        - name: http
          containerPort: 4000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: live-broadcaster
  labels:
    app: live-broadcaster
spec:
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: live-broadcaster
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: live-broadcaster-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - live-broadcaster.aks-poland-central.stunner.cc
    secretName: live-broadcaster-tls
  rules:
  - host: live-broadcaster.aks-poland-central.stunner.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: live-broadcaster
            port:
              number: 4000
